--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Arimo', sans-serif;
     margin: 0;
     padding: 0;
-    transition: background 0.3s, color 0.3s;
+    transition: all 0.3s ease;
 }
 
 header {
@@ -51,7 +51,4 @@ header {
 body {
     background: var(--background);
     color: var(--text);
-}
-.hidden {
-    display: none;
 }
