--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+:root {
+    --cor-text: #000000;
+}
+
 h3 {
     font-family: "Arimo", sans-serif;
     font-weight: 700;
@@ -26,6 +30,7 @@ p {
 
 .carousel {
     display: flex;
+    transition: transform 0.5s ease-in-out;
 }
 
 .card {
